Change syntax to enable more than one admins

--- a/templates/conf.php.j2
+++ b/templates/conf.php.j2
@@ -33,7 +33,7 @@ $conf['sql']['logqueries'] = false;
 $conf['sql']['phptype'] = 'mysql';
 $conf['nosql']['phptype'] = false;
 $conf['ldap']['useldap'] = false;
-$conf['auth']['admins'] = array('{{horde_admin}}');
+$conf['auth']['admins'] = array({{horde_admin}});
 $conf['auth']['checkip'] = true;
 $conf['auth']['checkbrowser'] = true;
 $conf['auth']['resetpassword'] = true;
