--- a/templates/conf.php.j2
+++ b/templates/conf.php.j2
@@ -25,7 +25,7 @@ $conf['sql']['username'] = '{{horde_db_user}}';
 $conf['sql']['password'] = '{{horde_db_pass}}';
 $conf['sql']['socket'] = '/var/run/mysqld/mysqld.sock';
 $conf['sql']['protocol'] = 'unix';
-$conf['sql']['database'] = '{{horde_db}}';
+$conf['sql']['database'] = '{{horde_db_name}}';
 $conf['sql']['charset'] = 'utf-8';
 $conf['sql']['ssl'] = false;
 $conf['sql']['splitread'] = false;
@@ -49,7 +49,7 @@ $conf['auth']['params']['login_block_time'] = 5;
 $conf['signup']['allow'] = false;
 $conf['log']['priority'] = 'INFO';
 $conf['log']['ident'] = 'HORDE';
-$conf['log']['name'] = LOG_USER;
+$conf['log']['name'] = '{{ horde_log_path }}';
 $conf['log']['type'] = 'syslog';
 $conf['log']['enabled'] = true;
 $conf['log_accesskeys'] = false;
