Set autocreate to mailboxes

--- a/templates/backends.php.j2
+++ b/templates/backends.php.j2
@@ -85,5 +85,5 @@ $servers['imap'] = array(
     //         'Example' => _("Example Special Mailbox")
     //     )
     ),
-    'autocreate_special' => false,
+    'autocreate_special' => true,
 );
