--- a/templates/conf.php.j2
+++ b/templates/conf.php.j2
@@ -5,7 +5,7 @@ $conf['sql']['protocol'] = '{{horde_webmail_db_connect}}';
 $conf['sql']['database'] = '{{horde_db_name}}';
 $conf['sql']['charset'] = '{{horde_webmail_db_charset}}';
 $conf['sql']['ssl'] = {{horde_webmail_ssl}};
-$conf['auth']['admins'] = array('{{horde_admin_username}}');
+$conf['auth']['admins'] = array({{ horde_admin_users | map('regex_replace', '(.*)', "'\\1'") | join(', ') }});
 $conf['auth']['params']['app'] = 'imp';
 $conf['auth']['params']['hostspec'] = '{{horde_mail_imap_server}}';
 $conf['auth']['params']['port'] = {{horde_mail_imap_port}};
@@ -33,7 +33,7 @@ if (array_key_exists('HTTP_X_FORWARDED_SERVER', $_SERVER)) {
 	$conf['server']['name'] = $_SERVER['HTTP_X_FORWARDED_SERVER'];
 	$conf['cookie']['domain'] = $_SERVER['HTTP_X_FORWARDED_SERVER'];
 } elseif (array_key_exists('HTTP_X_FORWARDED_HOST', $_SERVER)) {
-    $conf['server']['name'] = $_SERVER['HTTP_X_FORWARDED_HOST'];
+	$conf['server']['name'] = $_SERVER['HTTP_X_FORWARDED_HOST'];
 	$conf['cookie']['domain'] = $_SERVER['HTTP_X_FORWARDED_HOST'];
 }
 {% endif %}
