Make delete move to trash default

--- a/templates/prefs.php.j2
+++ b/templates/prefs.php.j2
@@ -49,6 +49,7 @@ $_prefs['confirm_email'] = array(
     'value' => 'a:0:{}'
 );
 
+$_prefs['use_trash']['value'] = 1;
 
 
 // *** Authentication Preferences ***
