Update default horde vhost template

--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -1,3 +1,10 @@
+<VirtualHost *:80>
+
+        ServerName {{ horde_vhost_server_name }}
+        Redirect / https://{{ horde_vhost_server_name }}
+
+</VirtualHost>
+
 <VirtualHost *:443>
         
         ServerName {{ horde_vhost_server_name }}
